--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.13",
     "@mui/material": "^5.10.2",
     "@octokit/rest": "^19.0.4",
+    "auth0": "^2.44.0",
     "next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
