--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
