--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,5 +5,6 @@
 tasks:
   - init: npm install && npm run build
     command: npm run start
+  - init: curl -sL https://github.com/caddyserver/caddy/releases/download/v2.6.2/caddy_2.6.2_linux_amd64.tar.gz /tmp/caddy | tar -zxv -C /tmp caddy
 
 
