--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "serve": "sudo /tmp/caddy run"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
@@ -20,7 +19,9 @@
     "@octokit/auth-app": "^4.0.7",
     "@octokit/core": "^4.1.0",
     "@octokit/rest": "^19.0.4",
+    "@types/nodegit": "^0.28.2",
     "auth0": "^2.44.0",
+    "dotenv": "^16.0.3",
     "next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
